--- a/Online_Shop/locale/en/LC_MESSAGES/django.po
+++ b/Online_Shop/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-18 23:03+0100\n"
+"POT-Creation-Date: 2024-11-19 21:19+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,14 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#: cart/forms.py:11
+msgid "Quantity"
+msgstr ""
+
+#: coupons/forms.py:6
+msgid "Coupon"
+msgstr ""
 
 #: env/lib/python3.12/site-packages/click/_termui_impl.py:518
 #, python-brace-format
@@ -1651,4 +1659,37 @@ msgstr ""
 
 #: myshop/settings.py:122
 msgid "Spanish"
+msgstr ""
+
+#: shop/templates/shop/base.html:8 shop/templates/shop/base.html:13
+msgid "My shop"
+msgstr ""
+
+#: shop/templates/shop/base.html:19
+msgid "Your cart"
+msgstr ""
+
+#: shop/templates/shop/base.html:21
+#, python-format
+msgid ""
+"\n"
+"            %(items)s item, $%(total)s\n"
+"          "
+msgid_plural ""
+"\n"
+"            %(items)s items, $%(total)s\n"
+"          "
+msgstr[0] ""
+msgstr[1] ""
+
+#: shop/templates/shop/base.html:28
+msgid "Your cart is empty."
+msgstr ""
+
+#: shop/templates/shop/product/detail.html:22
+msgid "Add to cart"
+msgstr ""
+
+#: shop/templates/shop/product/detail.html:29
+msgid "People who bought this also bought"
 msgstr ""
