Chapter11: URL patterns for internalionalization
Adding a language prefix to URL patterns
Translating URL patterns

--- a/Online_Shop/locale/es/LC_MESSAGES/django.po
+++ b/Online_Shop/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-19 21:19+0100\n"
+"POT-Creation-Date: 2024-11-19 22:49+0100\n"
 "PO-Revision-Date: 2024-11-19 21:07+0000\n"
 "Last-Translator:   <vostro@example.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -370,8 +370,8 @@ msgstr ""
 
 #: env/lib/python3.12/site-packages/django/core/validators.py:315
 msgid ""
-"Enter a valid “slug” consisting of Unicode letters, numbers, underscores, or"
-" hyphens."
+"Enter a valid “slug” consisting of Unicode letters, numbers, underscores, or "
+"hyphens."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/core/validators.py:327
@@ -583,15 +583,15 @@ msgstr ""
 #: env/lib/python3.12/site-packages/django/db/models/fields/__init__.py:1556
 #, python-format
 msgid ""
-"“%(value)s” value has an invalid format. It must be in YYYY-MM-DD "
-"HH:MM[:ss[.uuuuuu]][TZ] format."
+"“%(value)s” value has an invalid format. It must be in YYYY-MM-DD HH:MM[:ss[."
+"uuuuuu]][TZ] format."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/db/models/fields/__init__.py:1564
 #, python-format
 msgid ""
-"“%(value)s” value has the correct format (YYYY-MM-DD "
-"HH:MM[:ss[.uuuuuu]][TZ]) but it is an invalid date/time."
+"“%(value)s” value has the correct format (YYYY-MM-DD HH:MM[:ss[.uuuuuu]]"
+"[TZ]) but it is an invalid date/time."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/db/models/fields/__init__.py:1569
@@ -610,8 +610,8 @@ msgstr ""
 #: env/lib/python3.12/site-packages/django/db/models/fields/__init__.py:1859
 #, python-format
 msgid ""
-"“%(value)s” value has an invalid format. It must be in [DD] "
-"[[HH:]MM:]ss[.uuuuuu] format."
+"“%(value)s” value has an invalid format. It must be in [DD] [[HH:]MM:]ss[."
+"uuuuuu] format."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/db/models/fields/__init__.py:1863
@@ -770,8 +770,7 @@ msgid "Many-to-many relationship"
 msgstr ""
 
 #. Translators: If found as last label character, these punctuation
-#. characters will prevent the default label_suffix to be appended to the
-#. label
+#. characters will prevent the default label_suffix to be appended to the label
 #: env/lib/python3.12/site-packages/django/forms/boundfield.py:185
 msgid ":?.!"
 msgstr ""
@@ -821,8 +820,7 @@ msgstr ""
 
 #: env/lib/python3.12/site-packages/django/forms/fields.py:637
 #, python-format
-msgid ""
-"Ensure this filename has at most %(max)d character (it has %(length)d)."
+msgid "Ensure this filename has at most %(max)d character (it has %(length)d)."
 msgid_plural ""
 "Ensure this filename has at most %(max)d characters (it has %(length)d)."
 msgstr[0] ""
@@ -931,8 +929,7 @@ msgid "The inline value did not match the parent instance."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/forms/models.py:1450
-msgid ""
-"Select a valid choice. That choice is not one of the available choices."
+msgid "Select a valid choice. That choice is not one of the available choices."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/forms/models.py:1594
@@ -1413,10 +1410,10 @@ msgstr ""
 
 #: env/lib/python3.12/site-packages/django/views/csrf.py:45
 msgid ""
-"If you are using the <meta name=\"referrer\" content=\"no-referrer\"> tag or"
-" including the “Referrer-Policy: no-referrer” header, please remove them. "
-"The CSRF protection requires the “Referer” header to do strict referer "
-"checking. If you’re concerned about privacy, use alternatives like <a "
+"If you are using the <meta name=\"referrer\" content=\"no-referrer\"> tag or "
+"including the “Referrer-Policy: no-referrer” header, please remove them. The "
+"CSRF protection requires the “Referer” header to do strict referer checking. "
+"If you’re concerned about privacy, use alternatives like <a "
 "rel=\"noreferrer\" …> for links to third-party sites."
 msgstr ""
 
@@ -1468,8 +1465,8 @@ msgstr ""
 #: env/lib/python3.12/site-packages/django/views/generic/dates.py:652
 #, python-format
 msgid ""
-"Future %(verbose_name_plural)s not available because "
-"%(class_name)s.allow_future is False."
+"Future %(verbose_name_plural)s not available because %(class_name)s."
+"allow_future is False."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/views/generic/dates.py:692
@@ -1527,10 +1524,10 @@ msgstr ""
 #: env/lib/python3.12/site-packages/django/views/templates/default_urlconf.html:208
 #, python-format
 msgid ""
-"You are seeing this page because <a "
-"href=\"https://docs.djangoproject.com/en/%(version)s/ref/settings/#debug\" "
-"target=\"_blank\" rel=\"noopener\">DEBUG=True</a> is in your settings file "
-"and you have not configured any URLs."
+"You are seeing this page because <a href=\"https://docs.djangoproject.com/en/"
+"%(version)s/ref/settings/#debug\" target=\"_blank\" "
+"rel=\"noopener\">DEBUG=True</a> is in your settings file and you have not "
+"configured any URLs."
 msgstr ""
 
 #: env/lib/python3.12/site-packages/django/views/templates/default_urlconf.html:217
@@ -1661,13 +1658,43 @@ msgctxt "stick"
 msgid "club"
 msgstr ""
 
-#: myshop/settings.py:121
+#: myshop/settings.py:124
 msgid "English"
 msgstr "Inglés"
 
-#: myshop/settings.py:122
+#: myshop/settings.py:125
 msgid "Spanish"
 msgstr "Español"
+
+#: myshop/urls.py:28
+msgid "cart/"
+msgstr "carro/"
+
+#: myshop/urls.py:29
+#, fuzzy
+#| msgid "orders/"
+msgid "orders/"
+msgstr "pedidos/"
+
+#: myshop/urls.py:30
+msgid "payment/"
+msgstr "pago/"
+
+#: myshop/urls.py:31
+msgid "coupons/"
+msgstr "cupon/"
+
+#: payment/urls.py:9
+msgid "process/"
+msgstr "procesar/"
+
+#: payment/urls.py:10
+msgid "completed/"
+msgstr "completado/"
+
+#: payment/urls.py:11
+msgid "canceled/"
+msgstr "cancelado/"
 
 #: shop/templates/shop/base.html:8 shop/templates/shop/base.html:13
 msgid "My shop"
@@ -1759,15 +1786,6 @@ msgstr "Personas que compraron esto también compraron"
 #~ msgid "Checkout"
 #~ msgstr "Comprar"
 
-#~ msgid "cart/"
-#~ msgstr "carro/"
-
-#~ msgid "payment/"
-#~ msgstr "pago/"
-
-#~ msgid "coupons/"
-#~ msgstr "cupon/"
-
 #~ msgid "Payment canceled"
 #~ msgstr "Pago cancelado"
 
@@ -1804,15 +1822,6 @@ msgstr "Personas que compraron esto también compraron"
 
 #~ msgid "Pay now"
 #~ msgstr "Pagar ahora"
-
-#~ msgid "process/"
-#~ msgstr "procesar/"
-
-#~ msgid "completed/"
-#~ msgstr "completado/"
-
-#~ msgid "canceled/"
-#~ msgstr "cancelado/"
 
 #~ msgid "Language"
 #~ msgstr "Idioma"
