Chapter11: Allowing users to switch language

--- a/Online_Shop/locale/es/LC_MESSAGES/django.po
+++ b/Online_Shop/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-19 22:49+0100\n"
+"POT-Creation-Date: 2024-11-20 22:34+0100\n"
 "PO-Revision-Date: 2024-11-19 21:07+0000\n"
 "Last-Translator:   <vostro@example.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,9 +19,70 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Translated-Using: django-rosetta 0.10.0\n"
 
-#: cart/forms.py:11
+#: cart/forms.py:11 cart/templates/cart/detail.html:15
+#: payment/templates/payment/process.html:14
 msgid "Quantity"
 msgstr "Cantidad"
+
+#: cart/templates/cart/detail.html:5 cart/templates/cart/detail.html:9
+msgid "Your shopping cart"
+msgstr "Su carro"
+
+#: cart/templates/cart/detail.html:13
+#: env/lib/python3.12/site-packages/django/db/models/fields/files.py:420
+#: payment/templates/payment/process.html:11
+msgid "Image"
+msgstr "Imagen"
+
+#: cart/templates/cart/detail.html:14 payment/templates/payment/process.html:12
+#, fuzzy
+#| msgid "Products"
+msgid "Product"
+msgstr "Productos"
+
+#: cart/templates/cart/detail.html:16
+msgid "Remove"
+msgstr "Eliminar"
+
+#: cart/templates/cart/detail.html:17
+msgid "Unit price"
+msgstr "Precio unitario"
+
+#: cart/templates/cart/detail.html:18 payment/templates/payment/process.html:13
+msgid "Price"
+msgstr "Precio"
+
+#: cart/templates/cart/detail.html:53 payment/templates/payment/process.html:34
+msgid "Subtotal"
+msgstr "Subtotal"
+
+#: cart/templates/cart/detail.html:59
+#, python-format
+msgid ""
+"\n"
+"              \"%(code)s\" coupon (%(discount)s%% off)\n"
+"            "
+msgstr ""
+"\n"
+"              Cupón \"%(code)s\" (%(discount)s%% descuento)\n"
+"            "
+
+#: cart/templates/cart/detail.html:81
+#: shop/templates/shop/product/detail.html:29
+msgid "People who bought this also bought"
+msgstr "Personas que compraron esto también compraron"
+
+#: cart/templates/cart/detail.html:94
+msgid "Apply a coupon"
+msgstr "Aplicar cupón"
+
+#: cart/templates/cart/detail.html:101
+msgid "Continue shopping"
+msgstr "Continuar comprando"
+
+#: cart/templates/cart/detail.html:102
+msgid "Checkout"
+msgstr "Comprar"
 
 #: coupons/forms.py:6
 msgid "Coupon"
@@ -729,10 +790,6 @@ msgstr ""
 #: env/lib/python3.12/site-packages/django/db/models/fields/files.py:244
 msgid "File"
 msgstr ""
-
-#: env/lib/python3.12/site-packages/django/db/models/fields/files.py:420
-msgid "Image"
-msgstr "Imagen"
 
 #: env/lib/python3.12/site-packages/django/db/models/fields/json.py:24
 msgid "A JSON object"
@@ -1684,6 +1741,54 @@ msgstr "pago/"
 msgid "coupons/"
 msgstr "cupon/"
 
+#: payment/templates/payment/canceled.html:4
+msgid "Payment canceled"
+msgstr "Pago cancelado"
+
+#: payment/templates/payment/canceled.html:7
+msgid "Your payment has not been processed"
+msgstr "Su pago no ha sido procesado"
+
+#: payment/templates/payment/canceled.html:8
+msgid "There was a problem processing your payment."
+msgstr "Ha habido un problema con el procesamiento del pago."
+
+#: payment/templates/payment/completed.html:4
+msgid "Payment successful"
+msgstr "Pago realizado"
+
+#: payment/templates/payment/completed.html:7
+msgid "Your payment was successful"
+msgstr "Su pago ha sido realizado"
+
+#: payment/templates/payment/completed.html:8
+msgid "Your payment has been processed successfully."
+msgstr "Su pago se ha procesado correctamente."
+
+#: payment/templates/payment/process.html:4
+msgid "Pay your order"
+msgstr "Pague su compra"
+
+#: payment/templates/payment/process.html:7
+msgid "Order summary"
+msgstr "Resumen de compra"
+
+#: payment/templates/payment/process.html:15
+#: payment/templates/payment/process.html:54
+msgid "Total"
+msgstr "Total"
+
+#: payment/templates/payment/process.html:42
+#, python-format
+msgid ""
+"\n"
+"              \"%(code)s\" (%(discount)s%% off)\n"
+"            "
+msgstr ""
+"\n"
+"              \"%(code)s\" (%(discount)s%% descuento)\n"
+"            "
+
 #: payment/urls.py:9
 msgid "process/"
 msgstr "procesar/"
@@ -1696,15 +1801,19 @@ msgstr "completado/"
 msgid "canceled/"
 msgstr "cancelado/"
 
-#: shop/templates/shop/base.html:8 shop/templates/shop/base.html:13
+#: shop/templates/shop/base.html:8 shop/templates/shop/base.html:14
 msgid "My shop"
 msgstr "Mi tienda"
 
 #: shop/templates/shop/base.html:19
+msgid "Language"
+msgstr "Idioma"
+
+#: shop/templates/shop/base.html:37
 msgid "Your cart"
 msgstr "Su carro"
 
-#: shop/templates/shop/base.html:21
+#: shop/templates/shop/base.html:39
 #, fuzzy, python-format
 #| msgid ""
 #| "\n"
@@ -1731,7 +1840,7 @@ msgstr[1] ""
 "                %(items)s productos, $%(total)s\n"
 "              "
 
-#: shop/templates/shop/base.html:28
+#: shop/templates/shop/base.html:46
 msgid "Your cart is empty."
 msgstr "Su carro está vacío."
 
@@ -1739,98 +1848,24 @@ msgstr "Su carro está vacío."
 msgid "Add to cart"
 msgstr "Añadir al carro"
 
-#: shop/templates/shop/product/detail.html:29
-msgid "People who bought this also bought"
-msgstr "Personas que compraron esto también compraron"
+#: shop/templates/shop/product/list.html:5
+#: shop/templates/shop/product/list.html:23
+msgid "Products"
+msgstr "Productos"
 
-#~ msgid "Your shopping cart"
-#~ msgstr "Su carro"
+#: shop/templates/shop/product/list.html:10
+msgid "Categories"
+msgstr "Categorías"
 
-#~ msgid "Remove"
-#~ msgstr "Eliminar"
-
-#~ msgid "Unit price"
-#~ msgstr "Precio unitario"
-
-#~ msgid "Price"
-#~ msgstr "Precio"
+#: shop/templates/shop/product/list.html:13
+msgid "All"
+msgstr "Todos"
 
 #~ msgid "Update"
 #~ msgstr "Actualizar"
 
-#~ msgid "Subtotal"
-#~ msgstr "Subtotal"
-
-#, python-format
-#~ msgid ""
-#~ "\n"
-#~ "              \"%(code)s\" coupon (%(discount)s%% off)\n"
-#~ "            "
-#~ msgstr ""
-#~ "\n"
-#~ "              Cupón \"%(code)s\" (%(discount)s%% descuento)\n"
-#~ "            "
-
-#~ msgid "Total"
-#~ msgstr "Total"
-
-#~ msgid "Apply a coupon"
-#~ msgstr "Aplicar cupón"
-
 #~ msgid "Apply"
 #~ msgstr "Aplicar"
 
-#~ msgid "Continue shopping"
-#~ msgstr "Continuar comprando"
-
-#~ msgid "Checkout"
-#~ msgstr "Comprar"
-
-#~ msgid "Payment canceled"
-#~ msgstr "Pago cancelado"
-
-#~ msgid "Your payment has not been processed"
-#~ msgstr "Su pago no ha sido procesado"
-
-#~ msgid "There was a problem processing your payment."
-#~ msgstr "Ha habido un problema con el procesamiento del pago."
-
-#~ msgid "Payment successful"
-#~ msgstr "Pago realizado"
-
-#~ msgid "Your payment was successful"
-#~ msgstr "Su pago ha sido realizado"
-
-#~ msgid "Your payment has been processed successfully."
-#~ msgstr "Su pago se ha procesado correctamente."
-
-#~ msgid "Pay your order"
-#~ msgstr "Pague su compra"
-
-#~ msgid "Order summary"
-#~ msgstr "Resumen de compra"
-
-#, python-format
-#~ msgid ""
-#~ "\n"
-#~ "              \"%(code)s\" (%(discount)s%% off)\n"
-#~ "            "
-#~ msgstr ""
-#~ "\n"
-#~ "              \"%(code)s\" (%(discount)s%% descuento)\n"
-#~ "            "
-
 #~ msgid "Pay now"
 #~ msgstr "Pagar ahora"
-
-#~ msgid "Language"
-#~ msgstr "Idioma"
-
-#~ msgid "Products"
-#~ msgstr "Productos"
-
-#~ msgid "Categories"
-#~ msgstr "Categorías"
-
-#~ msgid "All"
-#~ msgstr "Todos"
