--- a/Online_Shop/orders/locale/es/LC_MESSAGES/django.po
+++ b/Online_Shop/orders/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-19 22:49+0100\n"
+"POT-Creation-Date: 2024-11-20 22:34+0100\n"
 "PO-Revision-Date: 2024-01-04 20:12+0000\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,6 +64,7 @@ msgstr ""
 "          "
 
 #: orders/templates/orders/order/create.html:27
+#: orders/templates/orders/order/pdf.html:58
 msgid "Total"
 msgstr "Total"
 
@@ -71,49 +72,65 @@ msgstr "Total"
 msgid "Place order"
 msgstr "Realizar compra"
 
+#: orders/templates/orders/order/pdf.html:4
+msgid "My shop"
+msgstr "Mi tienda"
+
+#: orders/templates/orders/order/pdf.html:6
+msgid "Invoice no."
+msgstr "Factura no."
+
+#: orders/templates/orders/order/pdf.html:11
+msgid "Bill to"
+msgstr "Facturar a"
+
+#: orders/templates/orders/order/pdf.html:18
+msgid "Items bought"
+msgstr "Productos comprados"
+
+#: orders/templates/orders/order/pdf.html:22
+msgid "Product"
+msgstr "Producto"
+
+#: orders/templates/orders/order/pdf.html:23
+msgid "Price"
+msgstr "Precio"
+
+#: orders/templates/orders/order/pdf.html:24
+msgid "Quantity"
+msgstr "Cantidad"
+
+#: orders/templates/orders/order/pdf.html:25
+msgid "Cost"
+msgstr "Coste"
+
+#: orders/templates/orders/order/pdf.html:40
+msgid "Subtotal"
+msgstr "Subtotal"
+
+#: orders/templates/orders/order/pdf.html:47
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "              \"%(code)s\" (%(discount)s%% off)\n"
+#| "            "
+msgid ""
+"\n"
+"              \"%(code)s\" (%(discount)s%% off)\n"
+"              "
+msgstr ""
+"\n"
+"              \"%(code)s\" (%(discount)s%% descuento)\n"
+"            "
+
+#: orders/templates/orders/order/pdf.html:65
+msgid "Paid"
+msgstr "Pagado"
+
+#: orders/templates/orders/order/pdf.html:65
+msgid "Pending payment"
+msgstr "Pendiente de pago"
+
 #: orders/urls.py:9
 msgid "create/"
 msgstr "crear/"
-
-#~ msgid "My shop"
-#~ msgstr "Mi tienda"
-
-#~ msgid "Invoice no."
-#~ msgstr "Factura no."
-
-#~ msgid "Bill to"
-#~ msgstr "Facturar a"
-
-#~ msgid "Items bought"
-#~ msgstr "Productos comprados"
-
-#~ msgid "Product"
-#~ msgstr "Producto"
-
-#~ msgid "Price"
-#~ msgstr "Precio"
-
-#~ msgid "Quantity"
-#~ msgstr "Cantidad"
-
-#~ msgid "Cost"
-#~ msgstr "Coste"
-
-#~ msgid "Subtotal"
-#~ msgstr "Subtotal"
-
-#, python-format
-#~ msgid ""
-#~ "\n"
-#~ "              \"%(code)s\" (%(discount)s%% off)\n"
-#~ "            "
-#~ msgstr ""
-#~ "\n"
-#~ "              \"%(code)s\" (%(discount)s%% descuento)\n"
-#~ "            "
-
-#~ msgid "Paid"
-#~ msgstr "Pagado"
-
-#~ msgid "Pending payment"
-#~ msgstr "Pendiente de pago"
